1/24/2006 Bob Rossi <bob@brasko.net>

	* cgdb.info: Autogenerated.
	* cgdb.texinfo: General improvements.

1/24/2006 Bob Rossi <bob@brasko.net>

	* cgdb.info: Autogenerated.
	* cgdb.texinfo: General improvements.

1/24/2006 Bob Rossi <bob@brasko.net>

	* cgdb.info: Autogenerated.
	* cgdb.texinfo: General improvements.

1/24/2006 Bob Rossi <bob@brasko.net>

	* cgdb.info: Autogenerated.
	* cgdb.texinfo: General improvements.

1/24/2006 Bob Rossi <bob@brasko.net>

	* cgdb.info: Autogenerated.
	* cgdb.texinfo (Configuring CGDB): General improvements.

1/24/2006 Bob Rossi <bob@brasko.net>

	* cgdb.info: Autogenerated.
	* cgdb.texinfo (Configuring CGDB): Add :syntax command.

1/24/2006 Bob Rossi <bob@brasko.net>

	* cgdb.info: Autogenerated.
	* cgdb.texinfo (Configuring CGDB): General improvements.

1/24/2006 Bob Rossi <bob@brasko.net>

	* cgdb.info: Autogenerated.
	* cgdb.texinfo (Configuring CGDB): General improvements.

1/23/2006 Bob Rossi <bob@brasko.net>

	* cgdb.info: Autogenerated.
	* cgdb.texinfo: Replaced ^f chars to Ctrl-f, but for all chars.

1/23/2006 Bob Rossi <bob@brasko.net>

	* cgdb.info: Autogenerated.
	* cgdb.texinfo: Fixed another problem caught by Eli.

1/23/2006 Bob Rossi <bob@brasko.net>

	* cgdb.info: Autogenerated.
	* cgdb.texinfo: Fixed error caught by Eli.

1/23/2006 Bob Rossi <bob@brasko.net>

	* cgdb.info: Autogenerated.
	* cgdb.texinfo: Minor changes suggested by Eli.

1/23/2006 Bob Rossi <bob@brasko.net>

	* cgdb.info: Autogenerated.
	* cgdb.texinfo: Minor changes suggested by Eli. Spell check.

1/23/2006 Bob Rossi <bob@brasko.net>

	* cgdb.info: Autogenerated.
	* cgdb.texinfo: Minor changes suggested by Eli.

1/22/2006 Bob Rossi <bob@brasko.net>

	* cgdb.info: Autogenerated.
	* cgdb.texinfo: Many of Eli's suggestions.

1/22/2006 Bob Rossi <bob@brasko.net>

	* cgdb.info: Autogenerated.
	* cgdb.texinfo: Adding @cindex and @dfn for several terms.

1/22/2006 Bob Rossi <bob@brasko.net>

	* cgdb.info: Autogenerated.