@@ -1,5 +1,11 @@
 1/24/2006 Bob Rossi <bob@brasko.net>
 
+	* Makefile.am (SUFFICES, html_docs, .texinfo.html, PHONY, html):
+	Removed.
+	* Makefile.in: Autogenerated.
+
+1/24/2006 Bob Rossi <bob@brasko.net>
+
 	* cgdb.info: Autogenerated.
 	* cgdb.texinfo: General improvements.
 
